--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.config.import=optional:configserver:
 
 spring.application.name = accounting-service
 server.port = 8200
+
+spring.cloud.config.uri = http://localhost:8888
