--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.application.name = accounting-service
 server.port = 8200
 
 spring.cloud.config.uri = http://localhost:8888
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
