--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.port = 8200
 spring.cloud.config.uri = http://localhost:8888
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+
+logging.level.project.user.UserClient = DEBUG
