--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,11 @@ spring.cloud.config.uri = http://localhost:8888
 
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
 
-logging.level.project.user.UserClient = DEBUG
+spring.kafka.consumer.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id = accounts
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages = *
+spring.kafka.employee-topic = employee-service
+spring.kafka.workhour-topic = workhour-service
